# news-agent

./: .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  skills-lock.json
alembic/: env.py
dashboard/: package-lock.json  package.json  pnpm-lock.yaml
docs/: ISSUE_Model_Allocation_Form_Reorganization.md  PRD_Backlog_Processing_and_Task_Execution_History.md  PRD_Cooldown_Indicator_and_Timeout_Tracking.md  PRD_Dynamic_Task_Pacing_Delay.md  PRD_Frontend_Integration_and_Redesign.md  PRD_Insight_Vault_Refactoring_and_Divergence_Monitor.md  PRD_Model_Allocation_Visual_Grouping.md  PRD_Model_Selection_and_Fallback.md  PRD_News_Fetch_Split_and_Task_Cancellation.md  PRD_Pipeline_Deduplication_Consolidation.md  PRD_Volume_Trigger_and_Cooldown_Break.md
src/: main.py
tests/: conftest.py  test_alerts.py  test_api_news_extended.py  test_api_scheduler.py  test_api_syndicated.py  test_briefing.py  test_briefing_trigger.py  test_collector_adapter.py  test_collector_fetcher.py  test_cooldown.py  test_dedup.py  test_divergence.py  test_earnings_adapter.py  test_embedding_fallback.py  test_fallback_seam.py  test_glossary.py  test_ingest.py  test_ingestion_pipeline.py  test_insights_extended.py  test_macro_adapter.py  test_market_wire.py  test_model_quota.py  test_newsapi_adapter.py  test_newsapi_sources.py  test_pipeline.py  test_pipeline_checkpoint.py  test_pipeline_timeout.py  test_preprocessing.py  test_priority_queue.py  test_rss_adapter.py  test_rss_settings.py  test_rsshub_sources.py  test_system_status.py  test_task_history.py  (+1 more)
(+78 files in other folders)
